dockerize the app to host it on the machine

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="icon/png" href="src/assets/dev2ndbrain.png" />
+    <link rel="icon" type="icon/png" href="./public/dev2ndbrain.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dev2ndBrain</title>
   </head>
